# hakyll-extra

./: .gitignore  README.md  hakyll-extra.cabal  stack.yaml
src/Hakyll/: Translation.hs
src/Hakyll/Core/Identifier/Pattern/: Extra.hs
src/Hakyll/Core/Rules/: Extra.hs
src/Hakyll/Core/Util/: JSON.hs
src/Hakyll/Translation/: Types.hs
src/Hakyll/Translation/Examples/: AllLanguages.hs  Directories.hs  ToJavascript.hs  processTranslation.js
src/Hakyll/Translation/Format/: Metadata.hs
src/Hakyll/Web/Template/Context/: Extra.hs
